--- a/Dairy_Care_System/dairy/static/css/changepassword.css
+++ b/Dairy_Care_System/dairy/static/css/changepassword.css
@@ -1,3 +1,8 @@
+html, body {
+    height: 100%; /* Make sure the body takes up the full height of the viewport */
+    margin: 0; /* Remove default margin */
+}
+
 .container {
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
