--- a/Dairy_Care_System/templates/changepassword.html
+++ b/Dairy_Care_System/templates/changepassword.html
@@ -9,6 +9,9 @@
             background: url('{% static "images/changerestpassword.png" %}') no-repeat center center fixed;
             background-size: cover;
             font-family: Arial, sans-serif;
+            display: flex; /* Use flexbox for centering */
+            align-items: center; /* Center vertically */
+            justify-content: center; /* Center horizontally */
         }
     </style>
     <script>
