--- a/Dairy_Care_System/templates/forgotpassword.html
+++ b/Dairy_Care_System/templates/forgotpassword.html
@@ -16,7 +16,8 @@
 </head>
 <body>
     <a href="{% url 'home' %}" class="home-link">
-    <img src="{% static 'images/homeblack.jpg' %}" alt="Home"></a>
+        <img src="{% static 'images/homeblack.jpg' %}" alt="Home">
+    </a>
     <div class="container">
         <div class="forgot-box">
             <h2><u>Forgot Password</u></h2>
@@ -30,12 +31,15 @@
                 </div>
                 <button type="submit">Send Reset Password Link</button>
             </form><br>
-            <p class="have-account">Remember Password ? <a href="{% url 'login' %}" class="back-link">Log in</a></p>
-            <div class="success-message" id="successMessage"></div>
+            <p class="have-account">Remember Password? <a href="{% url 'login' %}" class="back-link">Log in</a></p>
+            <div class="message-container">
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="{{ message.tags }}">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+            </div>
         </div>
     </div>
-    {% if error %}
-        <p>{{ error }}</p>
-    {% endif %}
 </body>
 </html>
