--- a/Dairy_Care_System/templates/productslist.html
+++ b/Dairy_Care_System/templates/productslist.html
@@ -3,32 +3,23 @@
 <html lang="en">
 <head>
     <title>Products Page</title>
-    <link rel="stylesheet" href="{% static 'css/employeepage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/productslist.css' %}">
     <style>
         body {
-            background: url('{% static "images/pic" %}') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
         }
     </style>
 </head>
 <body>
-    <!-- <a href="{% url 'home' %}" class="home-link">
-        <img src="{% static 'images/homeblack.jpg' %}" alt="Home">
-    </a> -->
-
 <!-- Navigation Bar-->
 <ul>
     <div class="header">
-        <!-- Greeting with username on the left
-        <div class="nav-item left">
-            <li><b>Hi, {{ username }}</b></li>
-        </div>   -->
         <div class="nav-item">
             <li><b><a href="{% url 'addproducts' %}">Add Products</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'home' %}">Equipments details</a></b></li>
+            <li><b><a href="{% url 'home' %}">Update Products</a></b></li>
         </div>
         <div class="nav-item">
             <li>
@@ -42,8 +33,19 @@
     </div>
 </ul>
 
-<center>
-    <h1><b>Employee Dashboard</b></h1>
-</center>
+<div class="products-container">
+    {% for product in products %}
+        <div class="product" onclick="window.location.href='{% url 'productdetails' product.product_id %}'" style="cursor: pointer;">
+            {% for image in product.images.all %}
+                <img src="{{ image.image.url }}" alt="{{ product.product_name }}">
+            {% endfor %}
+            <h3>{{ product.product_name }}</h3>
+            <p>Quantity: {{ product.product_quantity }} {{ product.quantity_unit }}</p>
+        </div>
+    {% empty %}
+        <p>No products available.</p>
+    {% endfor %}
+</div>
+
 </body>
 </html>
