--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -21,7 +21,7 @@
                 <li><b>Hi, {{ username }}</b></li>
             </div> -->
             <div class="nav-item">
-                <li><b><a href="{% url 'home' %}">Products list</a></b></li>
+                <li><b><a href="{% url 'productslist' %}">Products list</a></b></li>
             </div>
             <div class="nav-item">
                 <li><b><a href="{% url 'home' %}">Orders list</a></b></li>
