--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -31,7 +31,7 @@
             <li><b><a href="{% url 'home' %}">Animals list</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'home' %}">Products list</a></b></li>
+            <li><b><a href="{% url 'productslist' %}">Products list</a></b></li>
         </div>
         <div class="nav-item">
             <li><b><a href="{% url 'home' %}">Transactions</a></b></li>
