--- a/Dairy_Care_System/templates/productslist.html
+++ b/Dairy_Care_System/templates/productslist.html
@@ -19,7 +19,7 @@
             <li><b><a href="{% url 'addproducts' %}">Add Products</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'home' %}">Update Products</a></b></li>
+            <li><b><a href="{% url 'updateproduct' %}">Update Products</a></b></li>
         </div>
         <div class="nav-item">
             <li>
