--- a/Dairy_Care_System/templates/feedbackpage.html
+++ b/Dairy_Care_System/templates/feedbackpage.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <a href="{% url 'customerpage' %}" class="back-link">Back</a>
-        <a href="{% url 'home' %}" class="home-link">
+        <a href="{% url 'logout' %}" class="home-link">
             <img src="{% static 'images/homeblue.jpg' %}" alt="Home">
         </a>
         <div class="feedback-box">
